--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Cotação de moedas</title>
 </head>
 <body>
+
+    <div class="title">Cotação das moedas Dólar e Euro em relação ao Real</div>
     <div class="box">
         <div class="boxDolar">Dólar</div>
            <div id="dolar">        
@@ -15,9 +17,10 @@
         <div class="boxDolar">Euro</div>
             <div id="euro">         
         </div> 
-    </div>       
+    </div>  
+       
     
+<script src="cotacao.js"></script> 
 
-<script src="cotacao.js"></script>    
 </body>
 </html>
