--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
 </head>
 <body>
 
+    <section>
+
     <div class="title">Cotação das moedas Dólar e Euro em relação ao Real</div>
+    <hr>
     <div class="box">
-        <div class="boxDolar">Dólar</div>
+        <div id="current_date"></div>
+        <hr>
+        <div class="boxTitle">Dólar</div>
            <div id="dolar">        
         </div> 
-        <div class="boxDolar">Euro</div>
+        <div class="boxTitle">Euro</div>
             <div id="euro">         
         </div> 
+        <div class="boxTitle">Bitcoin</div>
+            <div id="bitcoin">         
+        </div> 
     </div>  
+
+</section>    
        
     
 <script src="cotacao.js"></script> 
+<script src="date.js"></script>
 
 </body>
 </html>
