--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <input type="text" onInput="mascaraMoeda(event)" name="avisoEuro" id="inputBitcoin" value=""/>
                 </div>
                 <input type="button" value="Gravar novo Valor" onclick="valor()"> 
+                <input type="button" value="Limpar/Parar" onclick="funcao1()"> 
+               
         </div>
     </form> 
     <hr> 
