--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <hr>
         <form action="">
         <div class="avisos">
-            <div class="avisoDolar">Alerta se o Dólar baixar de 
+            <div class="avisoDolar">Valor Mín. Dólar  
                 
                 <input type="text" onInput="mascaraMoeda(event)" name="avisoDolar" id="inputDolar" value=""/>
                 </div>
            
-                <div class="avisoEuro">Alerta se o Euro baixar de 
+                <div class="avisoEuro">Valor Mín. Euro  
                     <input type="text" onInput="mascaraMoeda(event)" name="avisoEuro" id="inputEuro" value=""/>
                 </div>
-                <div class="avisoBitcoin">Alerta se o Bitcoin baixar de 
+                <div class="avisoBitcoin">Valor Mín. Bitcoin  
                     <input type="text" onInput="mascaraMoeda(event)" name="avisoEuro" id="inputBitcoin" value=""/>
                 </div>
                 <input type="button" value="Gravar novo Valor" class='button' onclick="valor()"> 
