--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <section>
 
-    <div class="title">Cotação das moedas Dólar,Euro e Bitcoin em relação ao Real</div>
+    <div class="title">
+        <img src="ilustracao.webp" alt="">
+        <div class="currency">Currency Quote</div>
+    </div>
+    <div class="subtitle">Dólar  --  Euro -- Bitcoin</div> 
     <hr>
     <div class="box">
         <div id="current_date"></div>
@@ -61,6 +65,7 @@
             <div id="bitcoin">         
         </div>         
     </div>
+    <footer>Desenvolvido por Paulo Ricardo. Todos os direitos reservados®</footer>
 </section>    
 
 <audio id="chatAudio" >
